--- a/Style.css
+++ b/Style.css
@@ -82,8 +82,8 @@ nav a:hover {
     object-position: center bottom;
     opacity: 0.35;
     filter: saturate(0.9) contrast(1.05);
-    mask-image: linear-gradient(to right, black 60%, transparent 100%);
-    -webkit-mask-image: linear-gradient(to right, black 60%, transparent 100%);
+    mask-image: radial-gradient(circle at left center, black 60%, transparent 100%);
+    -webkit-mask-image: radial-gradient(circle at left center, black 60%, transparent 100%);
     clip-path: path('M0,0 C40%,20% 60%,80% 100%,0 L100%,100% L0,100% Z');
 }
 
